<resources>
    <string name="appName" translatable="false">Converta</string>
    <string name="onboardingBackgroundImageContentDescription">Gradient image</string>
    <string name="helloText">Hello</string>
    <string name="chooseCommunicationLanguageText">Choose your communication language</string>
    <string name="chooseCommunicationLanguageButtonText">Go to speech synthesizer settings</string>
    <string name="chooseApplicationModeText">I want the application to open in</string>
    <string name="applicationModeTTSButtonText">Speaking mode</string>
    <string name="applicationModeSTTButtonText">Listening mode</string>
    <string name="finishButtonText">Finish</string>
    <string name="STTTitle">Listening mode</string>
    <string name="TTSTitle">Speaking mode</string>
    <string name="phrasesCategoriesModeDisplayingText">Saved categories</string>
    <string name="phrasesModeDisplayingText">Saved phrases</string>
    <string name="addButtonContentDescription">Add icon</string>
    <string name="phraseEditingMode">Phrase editing</string>
    <string name="categoryEditingMode">Category editing</string>
    <string name="phraseAddingMode">Phrase adding</string>
    <string name="categoryAddingMode">Category adding</string>
    <string name="editTextHint">Enter text</string>
    <string name="discardButtonContentDescription">Discard</string>
    <string name="submitButtonContentDescription">Submit</string>
    <string name="deleteButtonContentDescription">Delete</string>
    <string name="enterPhraseHint">Enter phrase…</string>
    <string name="ttsErrorText">An error has occurred</string>
    <string name="startSTTRecognition">Start recognition</string>
    <string name="stopSTTRecognition">Stop recognition</string>
    <string name="settings">Settings</string>
    <string name="changeCommunicationLanguageSettingsAction">Change communication language</string>
    <string name="changeApplicationOpenModeSettingsAction">Change application open mode</string>
    <string name="listening">Listening</string>
    <string name="databaseRecordEditingHint">Long press on a phrase or category allows you to edit it</string>
</resources>