<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:id="@+id/bottomSheetDialogCard"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="17dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="17dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="64dp">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:text="@string/phraseAddingMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/currentMode"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="24dp"
                    android:fontFamily="@font/navigo_regular"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    android:ems="10"
                    android:id="@+id/editText"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/currentMode"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="0.4"
                    android:layout_marginEnd="48dp"
                    android:layout_marginStart="48dp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/navigo_regular"
                    android:textSize="17sp"
                    android:paddingBottom="0dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:hint="@string/editTextHint"
                    android:background="@null"
                    android:importantForAutofill="no"
                    android:minHeight="48dp" />

            <View
                    android:layout_width="0dp"
                    android:layout_height="3dp"
                    android:id="@+id/borderView"
                    app:layout_constraintTop_toBottomOf="@+id/editText"
                    app:layout_constraintEnd_toEndOf="@+id/editText"
                    app:layout_constraintStart_toStartOf="@+id/editText"
                    android:background="@drawable/border_view_rounded_corners"
                    android:layout_marginTop="4dp" />

            <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/discardButton"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:src="@drawable/ic_discard_orange"
                    android:background="@null"
                    android:padding="5dp"
                    android:contentDescription="@string/discardButtonContentDescription"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp" />

            <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/submitButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:src="@drawable/ic_submit_orange"
                    android:background="@null"
                    android:padding="5dp"
                    android:contentDescription="@string/submitButtonContentDescription"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp" />

            <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/deleteButton"
                    android:src="@drawable/ic_trash"
                    android:background="@null"
                    android:padding="5dp"
                    android:contentDescription="@string/deleteButtonContentDescription"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:visibility="invisible"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="5dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>