<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:text="@string/TTSTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/currentModeName"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="48dp"
            android:layout_marginStart="25dp"
            android:textColor="@color/white"
            android:fontFamily="@font/navigo_medium"
            android:textSize="30sp" />

    <com.delet_dis.converta.presentation.views.pickedPhrasesCardView.PickedPhrasesCardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="11dp"
            app:layout_constraintTop_toBottomOf="@+id/currentModeName"
            app:layout_constraintBottom_toTopOf="@+id/horizontalHalfScreenGuideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="13dp"
            android:layout_marginEnd="13dp"
            android:id="@+id/pickedPhrasesCardView" />

    <TextView
            android:text="@string/phrasesCategoriesModeDisplayingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/currentBottomRecyclerDisplayingMode"
            android:textColor="@color/white"
            android:fontFamily="@font/navigo_medium"
            android:textSize="30sp"
            app:layout_constraintTop_toTopOf="@+id/horizontalHalfScreenGuideline"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="25dp" />

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/settingsButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/ic_settings"
            android:background="@null"
            android:padding="5dp"
            android:contentDescription="@string/discardButtonContentDescription"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="16dp" />

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/horizontalHalfScreenGuideline"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.55" />

    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/currentBottomRecyclerDisplayingMode"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:id="@+id/itemsBottomRecycler"
            android:overScrollMode="ifContentScrolls">

    </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>